discussion/kv_engine/134655/134655_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39505: Rework default labels in StatCollector

Previously, adding a default label modified the existing StatCollector,
and returned a handle which would remove the default label when it went
out of scope.

This might not be the expected behaviour as it does not follow common
patterns; with a "mutable" set of labels hidden in a collector, it is
not clear what a call to addStat will do.

Now, the new collector returned from `withLabels` can be used to add a
labelled stat, and the existing collector is not altered.

 StatCollector collector;
 auto labelledCollector =
     collector.withLabels({{"scope","scopeName"}});

 // add a stat without the scope label
 collector.addStat(...)

 // add a stat _with_ the scope label
 labelledCollector.addStat(...)

Change-Id: I400e9869517b45dbe0ee96d49748056af45e324c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-08-27 10:14:26.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2020-08-27 10:16:13.000000000
Message: 
Patch Set 5: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-08-27 10:33:26.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5336/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29819/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\include\statistics\units.h(85): error C2039: "string_view_literals": is not a member of "std" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29819/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4027/ : FAILURE

clang-tidy found the following problems:

<pre>
error: too many errors emitted, stopping now [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_stat_collector.h:25:34: error: base class has incomplete type [clang-diagnostic-error]
class MockStatCollector : public StatCollector {
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_stat_collector.h:25:7: note: definition of "MockStatCollector" is not complete until the closing "}"
class MockStatCollector : public StatCollector {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_stat_collector.h:25:34: error: unknown class name "StatCollector"; did you mean "MockStatCollector"? [clang-diagnostic-error]
class MockStatCollector : public StatCollector {
                                 ^~~~~~~~~~~~~
                                 MockStatCollector
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_stat_collector.h:25:7: note: "MockStatCollector" declared here
class MockStatCollector : public StatCollector {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_stat_collector.h:29:11: error: use of undeclared identifier "StatCollector"; did you mean "MockStatCollector"? [clang-diagnostic-error]
    using StatCollector::addStat;
          ^~~~~~~~~~~~~
          MockStatCollector
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_stat_collector.h:25:7: note: "MockStatCollector" declared here
class MockStatCollector : public StatCollector {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_stat_collector.h:29:26: error: using declaration refers to its own class [clang-diagnostic-error]
    using StatCollector::addStat;
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_stat_collector.h:31:5: error: only virtual member functions can be marked "override" [clang-diagnostic-error]
    MOCK_METHOD(void,
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/third_party/googletest/googlemock/include/gmock/gmock-function-mocker.h:43:3: note: expanded from macro "MOCK_METHOD"
  GMOCK_PP_VARIADIC_CALL(GMOCK_INTERNAL_MOCK_METHOD_ARG_, __VA_ARGS__)
  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/third_party/googletest/googlemock/include/gmock/internal/gmock-pp.h:82:3: note: expanded from macro "GMOCK_PP_VARIADIC_CALL"
  GMOCK_PP_CAT(_Macro, GMOCK_PP_NARG(__VA_ARGS__))(__VA_ARGS__)
  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/third_party/googletest/googlemock/include/gmock/internal/gmock-pp.h:18:30: note: expanded from macro "GMOCK_PP_CAT"
#define GMOCK_PP_CAT(_1, _2) GMOCK_PP_INTERNAL_CAT(_1, _2)
                             ^
note: (skipping 1 expansions in backtrace; use -fmacro-backtrace-limit=0 to see all)
note: expanded from here
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/third_party/googletest/googlemock/include/gmock/gmock-function-mocker.h:60:3: note: expanded from macro "GMOCK_INTERNAL_MOCK_METHOD_ARG_4"
  GMOCK_INTERNAL_MOCK_METHOD_IMPL(                                            \
  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/third_party/googletest/googlemock/include/gmock/gmock-function-mocker.h:110:38: note: expanded from macro "GMOCK_INTERNAL_MOCK_METHOD_IMPL"
              GMOCK_PP_IF(_Override, override, )                               \
                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_stat_collector.h:33:64: error: unknown type name "Labels" [clang-diagnostic-error]
                (std::string_view k, std::string_view v, const Labels& labels),
                                                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_stat_collector.h:37:52: error: unknown type name "Labels" [clang-diagnostic-error]
                (std::string_view k, bool v, const Labels& labels),
                                                   ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4027/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_stat_collector.h:25:34:
error: base class has incomplete type [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4027/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2553/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25848/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4358/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5438/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5246/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13156/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
